force-app/main/default/objects/Insurance_Plan__c/Insurance_Plan__c.object-meta.xml
<CustomObject>
    <label>Insurance Plan</label>
    <nameField>
        <displayFormat>IP-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>