force-app/main/default/objects/Insurance_Plan__c/fields/A4557__c.field-meta.xml
<CustomField>
    <fullName>A4557__c</fullName>
    <label>A4557</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>