force-app/main/default/objects/Insurance_Plan__c/fields/Account_Id_from_VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_from_VOB_Case__c</fullName>
    <formula>VOB_Case__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id from VOB Case</label>
    <type>Text</type>
</CustomField>