force-app/main/default/objects/Insurance_Plan__c/fields/ACU_Modality_Limit_Per_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>ACU_Modality_Limit_Per_Date_of_Service__c</fullName>
    <label>ACU Modality Limit Per Date of Service</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>