force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Covered_by_WC_NEW__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Covered_by_WC_NEW__c</fullName>
    <label>Acupuncture Covered by WC</label>
    <length>75</length>
    <type>Text</type>
</CustomField>