force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Hard_Max__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Hard_Max__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acupuncture Hard Max?</label>
    <type>Checkbox</type>
</CustomField>