force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Paid_Under_Capitation__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Paid_Under_Capitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acupuncture Paid Under Capitation</label>
    <type>Checkbox</type>
</CustomField>