force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Service_Diagnosis_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Service_Diagnosis_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acupuncture Service Diagnosis Dependent</label>
    <type>Checkbox</type>
</CustomField>