force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Therapy_Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Therapy_Benefits_Notes__c</fullName>
    <label>Acupuncture Therapy Benefits Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>