force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Visits_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Visits_Allowed__c</fullName>
    <label>Acupuncture Visits Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>