force-app/main/default/objects/Insurance_Plan__c/fields/Acupuncture_Visits_Combined__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Visits_Combined__c</fullName>
    <label>Acupuncture Visits Combined</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>