force-app/main/default/objects/Insurance_Plan__c/fields/Aggregate_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Allowance__c</fullName>
    <label>Aggregate Allowance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>