force-app/main/default/objects/Insurance_Plan__c/fields/Allowance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Percentage__c</fullName>
    <label>Allowance Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>