force-app/main/default/objects/Insurance_Plan__c/fields/Allowance_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Percentage_Number__c</fullName>
    <formula>Allowance_Percentage__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Percentage Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>