force-app/main/default/objects/Insurance_Plan__c/fields/Ambulatory_Surgery_Center_Covered__c.field-meta.xml
<CustomField>
    <fullName>Ambulatory_Surgery_Center_Covered__c</fullName>
    <label>Ambulatory Surgery Center Covered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>