force-app/main/default/objects/Insurance_Plan__c/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>