force-app/main/default/objects/Insurance_Plan__c/fields/Are_We_In_Network_Out_Network_Provider__c.field-meta.xml
<CustomField>
    <fullName>Are_We_In_Network_Out_Network_Provider__c</fullName>
    <label>Are We In-Network/Out Network Provider?</label>
    <length>75</length>
    <type>Text</type>
</CustomField>