force-app/main/default/objects/Insurance_Plan__c/fields/Authorization_Required_for_Acupuncture__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Required_for_Acupuncture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization Required for Acupuncture</label>
    <type>Checkbox</type>
</CustomField>