force-app/main/default/objects/Insurance_Plan__c/fields/Based_on_Secondary_VOB__c.field-meta.xml
<CustomField>
    <fullName>Based_on_Secondary_VOB__c</fullName>
    <formula>VOB_Case__r.Is_Secondary_VOB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Based on Secondary VOB</label>
    <type>Checkbox</type>
</CustomField>