force-app/main/default/objects/Insurance_Plan__c/fields/Billable_Time_Limit_For_A4556__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time_Limit_For_A4556__c</fullName>
    <label>Billable Time Limit For A4556</label>
    <length>100</length>
    <type>Text</type>
</CustomField>