force-app/main/default/objects/Insurance_Plan__c/fields/Billable_Time_Limit_For_E0218__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time_Limit_For_E0218__c</fullName>
    <label>Billable Time Limit For E0218</label>
    <length>100</length>
    <type>Text</type>
</CustomField>