force-app/main/default/objects/Insurance_Plan__c/fields/Buy_and_Bill_Injection_Codes__c.field-meta.xml
<CustomField>
    <fullName>Buy_and_Bill_Injection_Codes__c</fullName>
    <label>Buy and Bill Injection Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>