force-app/main/default/objects/Insurance_Plan__c/fields/Call_Length__c.field-meta.xml
<CustomField>
    <fullName>Call_Length__c</fullName>
    <label>Call Length</label>
    <length>50</length>
    <type>Text</type>
</CustomField>