force-app/main/default/objects/Insurance_Plan__c/fields/Call_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Reference_Number__c</fullName>
    <label>Call Reference Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>