force-app/main/default/objects/Insurance_Plan__c/fields/Can_Out_Of_Network_Provider_Treat_Here__c.field-meta.xml
<CustomField>
    <fullName>Can_Out_Of_Network_Provider_Treat_Here__c</fullName>
    <label>Can Out Of Network Provider Treat Here</label>
    <length>75</length>
    <type>Text</type>
</CustomField>