force-app/main/default/objects/Insurance_Plan__c/fields/Can_patient_treat_at_ASC__c.field-meta.xml
<CustomField>
    <fullName>Can_patient_treat_at_ASC__c</fullName>
    <label>Can Patient Treat at ASC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>