force-app/main/default/objects/Insurance_Plan__c/fields/Can_we_buy_and_bill_injection_codes__c.field-meta.xml
<CustomField>
    <fullName>Can_we_buy_and_bill_injection_codes__c</fullName>
    <label>Can we buy and bill injection codes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>