force-app/main/default/objects/Insurance_Plan__c/fields/CareCloud_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Patient_Id__c</fullName>
    <formula>VOB_Case__r.Patient_VOB__r.CareCloud_Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CareCloud Patient Id</label>
    <type>Text</type>
</CustomField>