force-app/main/default/objects/Insurance_Plan__c/fields/Chiro_Hard_Max__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Hard_Max__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chiro Hard Max?</label>
    <type>Checkbox</type>
</CustomField>