force-app/main/default/objects/Insurance_Plan__c/fields/Chiro_Paid_Under_Capitation__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Paid_Under_Capitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chiro Paid Under Capitation</label>
    <type>Checkbox</type>
</CustomField>