force-app/main/default/objects/Insurance_Plan__c/fields/Chiro_Visits_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Visits_Allowed__c</fullName>
    <label>Chiro Visits Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>