force-app/main/default/objects/Insurance_Plan__c/fields/Chiro_Visits_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Visits_To_Date__c</fullName>
    <label>Chiro Visits To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>