force-app/main/default/objects/Insurance_Plan__c/fields/Chiropractic_Benefits_Cigna_ASHN__c.field-meta.xml
<CustomField>
    <fullName>Chiropractic_Benefits_Cigna_ASHN__c</fullName>
    <label>Chiropractic Benefits Cigna ASHN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>