force-app/main/default/objects/Insurance_Plan__c/fields/Chiropractic_Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Chiropractic_Benefits_Notes__c</fullName>
    <label>Chiropractic Benefits Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>