force-app/main/default/objects/Insurance_Plan__c/fields/Chiropractor_Covered_by_WC_NEW__c.field-meta.xml
<CustomField>
    <fullName>Chiropractor_Covered_by_WC_NEW__c</fullName>
    <label>Chiropractor Covered by WC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>