force-app/main/default/objects/Insurance_Plan__c/fields/Chiropractor_Covered_by_WC_OLD__c.field-meta.xml
<CustomField>
    <fullName>Chiropractor_Covered_by_WC_OLD__c</fullName>
    <label>Chiropractor Covered by WC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>