force-app/main/default/objects/Insurance_Plan__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <label>Claim Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>