force-app/main/default/objects/Insurance_Plan__c/fields/Claims_Address__c.field-meta.xml
<CustomField>
    <fullName>Claims_Address__c</fullName>
    <label>Claims Address</label>
    <type>TextArea</type>
</CustomField>