force-app/main/default/objects/Insurance_Plan__c/fields/Co_treatment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Co_treatment_Notes__c</fullName>
    <label>Co-treatment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>