force-app/main/default/objects/Insurance_Plan__c/fields/Conservative_Modalities_Combined_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Conservative_Modalities_Combined_Per_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conservative Modalities Combined Per Day</label>
    <type>Checkbox</type>
</CustomField>