force-app/main/default/objects/Insurance_Plan__c/fields/Count_As_1_Or_2_Visits__c.field-meta.xml
<CustomField>
    <fullName>Count_As_1_Or_2_Visits__c</fullName>
    <label>Count As 1 Or 2 Visits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>