force-app/main/default/objects/Insurance_Plan__c/fields/Coverage_Year__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Year__c</fullName>
    <label>Coverage Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>Plan Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>