force-app/main/default/objects/Insurance_Plan__c/fields/Daily_Acupuncture_Capitated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Daily_Acupuncture_Capitated_Fee__c</fullName>
    <label>Daily Acupuncture Capitated Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>