force-app/main/default/objects/Insurance_Plan__c/fields/Deductible_Accumulation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Accumulation_Notes__c</fullName>
    <label>Deductible Accumulation Notes</label>
    <type>TextArea</type>
</CustomField>