force-app/main/default/objects/Insurance_Plan__c/fields/Deductible_Co_Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Co_Insurance_Notes__c</fullName>
    <label>Deductible &amp; Co-Insurance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>