force-app/main/default/objects/Insurance_Plan__c/fields/Deductible_Cross_Applies_NEW__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Cross_Applies_NEW__c</fullName>
    <label>Deductible Cross Applies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>