force-app/main/default/objects/Insurance_Plan__c/fields/DME_Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>DME_Benefits_Notes__c</fullName>
    <label>DME Benefits Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>