force-app/main/default/objects/Insurance_Plan__c/fields/DME_Diagnosis_Codes__c.field-meta.xml
<CustomField>
    <fullName>DME_Diagnosis_Codes__c</fullName>
    <label>DME Diagnosis Codes</label>
    <type>TextArea</type>
</CustomField>