force-app/main/default/objects/Insurance_Plan__c/fields/DME_Diagnosis_Dependent__c.field-meta.xml
<CustomField>
    <fullName>DME_Diagnosis_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DME Diagnosis Dependent</label>
    <type>Checkbox</type>
</CustomField>