force-app/main/default/objects/Insurance_Plan__c/fields/DME_Referral_Required__c.field-meta.xml
<CustomField>
    <fullName>DME_Referral_Required__c</fullName>
    <label>DME Referral Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>