force-app/main/default/objects/Insurance_Plan__c/fields/Does_plan_allow_co_treatment__c.field-meta.xml
<CustomField>
    <fullName>Does_plan_allow_co_treatment__c</fullName>
    <label>Does plan allow co-treatment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>