force-app/main/default/objects/Insurance_Plan__c/fields/Does_This_Plan_Have_Multiplan_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Does_This_Plan_Have_Multiplan_Benefit__c</fullName>
    <label>Does This Plan Have Multiplan Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>