force-app/main/default/objects/Insurance_Plan__c/fields/E0218__c.field-meta.xml
<CustomField>
    <fullName>E0218__c</fullName>
    <label>E0218</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>