force-app/main/default/objects/Insurance_Plan__c/fields/E0730_Been_Prescribed_in_Last_3_Years__c.field-meta.xml
<CustomField>
    <fullName>E0730_Been_Prescribed_in_Last_3_Years__c</fullName>
    <label>E0730 Been Prescribed in Last 3 Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>