force-app/main/default/objects/Insurance_Plan__c/fields/Exclusions_in_Covering_Acupuncture__c.field-meta.xml
<CustomField>
    <fullName>Exclusions_in_Covering_Acupuncture__c</fullName>
    <label>Exclusions in Covering Acupuncture</label>
    <type>TextArea</type>
</CustomField>