force-app/main/default/objects/Insurance_Plan__c/fields/Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule__c</fullName>
    <label>Fee Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Schedule</valueSetName>
    </valueSet>
</CustomField>