force-app/main/default/objects/Insurance_Plan__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <externalId>true</externalId>
    <label>Group Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>