force-app/main/default/objects/Insurance_Plan__c/fields/How_Is_Policy_Funded__c.field-meta.xml
<CustomField>
    <fullName>How_Is_Policy_Funded__c</fullName>
    <label>How Is Policy Funded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Fully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>