force-app/main/default/objects/Insurance_Plan__c/fields/How_many_pairs_of_orthotics_per_year__c.field-meta.xml
<CustomField>
    <fullName>How_many_pairs_of_orthotics_per_year__c</fullName>
    <label>How many pairs of orthotics per year?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>