force-app/main/default/objects/Insurance_Plan__c/fields/How_Often_is_Patient_Allowed_TENS_Unit__c.field-meta.xml
<CustomField>
    <fullName>How_Often_is_Patient_Allowed_TENS_Unit__c</fullName>
    <label>How Often is Patient Allowed TENS Unit</label>
    <type>TextArea</type>
</CustomField>