force-app/main/default/objects/Insurance_Plan__c/fields/How_To_Obtain_MD_Service_Authorization__c.field-meta.xml
<CustomField>
    <fullName>How_To_Obtain_MD_Service_Authorization__c</fullName>
    <label>How To Obtain MD Service Authorization</label>
    <type>TextArea</type>
</CustomField>