force-app/main/default/objects/Insurance_Plan__c/fields/How_to_Obtain_PT_Authorization__c.field-meta.xml
<CustomField>
    <fullName>How_to_Obtain_PT_Authorization__c</fullName>
    <label>How to Obtain PT Authorization</label>
    <type>TextArea</type>
</CustomField>