force-app/main/default/objects/Insurance_Plan__c/fields/How_to_Request_ACU_Exemption__c.field-meta.xml
<CustomField>
    <fullName>How_to_Request_ACU_Exemption__c</fullName>
    <label>How to Request ACU Exemption</label>
    <type>TextArea</type>
</CustomField>