force-app/main/default/objects/Insurance_Plan__c/fields/HSA_FSA_Flex_Card_HRA__c.field-meta.xml
<CustomField>
    <fullName>HSA_FSA_Flex_Card_HRA__c</fullName>
    <label>HSA/FSA/Flex Card/HRA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>