force-app/main/default/objects/Insurance_Plan__c/fields/If_NY_Is_Patient_Address_Listed_In_NY__c.field-meta.xml
<CustomField>
    <fullName>If_NY_Is_Patient_Address_Listed_In_NY__c</fullName>
    <label>If NY, Is Patient Address Listed In NY?</label>
    <length>75</length>
    <type>Text</type>
</CustomField>