force-app/main/default/objects/Insurance_Plan__c/fields/In_Network_Co_Insurance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Co_Insurance_Percentage__c</fullName>
    <label>In Network Co-Insurance Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>