force-app/main/default/objects/Insurance_Plan__c/fields/In_Network_Family_Deductible__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Family_Deductible__c</fullName>
    <label>In Network Family Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>