force-app/main/default/objects/Insurance_Plan__c/fields/In_Network_Out_of_Pocket_Max__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Out_of_Pocket_Max__c</fullName>
    <label>In Network Out of Pocket Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>