force-app/main/default/objects/Insurance_Plan__c/fields/In_Network_Specialty_Co_Pay__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Specialty_Co_Pay__c</fullName>
    <label>In Network Specialty Co-Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>