force-app/main/default/objects/Insurance_Plan__c/fields/In_Out_of_Network_PT_Visits_Combined__c.field-meta.xml
<CustomField>
    <fullName>In_Out_of_Network_PT_Visits_Combined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In/Out of Network PT Visits Combined</label>
    <type>Checkbox</type>
</CustomField>